--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Explore our specialized programs in software deveopment, graphics design,desktop
 Whether you're a beginner or an aspiring tech guru, we offer comprehensive training. Dive into desktop <br> publishing, explore the magic of programming (Python, JavaScript, Java, and more), and become a web <br> development whiz with ful-stack courses.
     </p>
     <button>Sign Up</button><br>
-    <img src="graphicsimage.png" alt="graphic image">
+    <img src="graphicsImage.png" alt="graphic image">
     <p class="sub-heading">Graphic Design Training and Services:</p> 
     <p>
 Unleash your creativity with our graphic design courses. Learn to craft stunning visuals and turn ideas into eye <br>
@@ -42,7 +42,7 @@ catching designs.<br>
 Need top-notch designs? Our skiled designers are here to bring your vision to life.
     </p>
     <button>Sign Up</button><br>
-    <img src="systemfiximage.jpg" alt="System fix image">
+    <img src="systemfixImage.jpg" alt="System fix image">
     <p class="sub-heading">Computer Repair and Maintenance: </p>
     <p>
 Trust our skiled technicians to keep your devices running smoothly. We ensure your tech stays in tiptop shape.
