--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@ Whether you're a beginner or an aspiring tech guru, we offer comprehensive train
     <img src="graphicsImage.png" alt="graphic image">
     <p class="sub-heading">Graphic Design Training and Services:</p> 
     <p>
-Unleash your creativity with our graphic design courses. Learn to craft stunning visuals and turn ideas into eye <br>
-catching designs.<br>
-Need top-notch designs? Our skiled designers are here to bring your vision to life.
+        Unleash your creativity with our graphic design courses. Learn to craft stunning visuals and turn ideas into eye <br>
+catching designs.
+    </p>
+    <p style="margin-top: 12px;">
+        Need top-notch designs? Our skiled designers are here to bring your vision to life.
     </p>
     <button>Sign Up</button><br>
     <img src="systemfixImage.jpg" alt="System fix image">
